# LogPolarFFTTemplateMatcher

./: .gitignore  CMakeLists.txt
apps/: CMakeLists.txt
include/fourier_mellin/: fftm.hpp
infra/: Apps.cmake
scripts/: download_win.sh
src/: CMakeLists.txt
src/fftm/: fftm.cpp
